--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,11 @@
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
-    "jeet": "~6.1.2"
+    "bourbon": "~4.0.2",
+    "neat": "~1.7.0",
+    "angular-material": "~0.6.1",
+    "pushy": "~0.9.2",
+    "jquery": "~2.1.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
