--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jshint-stylish": "^0.2.0",
     "karma": "^0.12.28",
     "load-grunt-tasks": "^0.4.0",
+    "node-bourbon": "^1.2.3",
     "time-grunt": "^0.3.1"
   },
   "engines": {
