--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,10 @@
     "neat": "~1.7.0",
     "angular-material": "~0.6.1",
     "pushy": "~0.9.2",
-    "jquery": "~2.1.3"
+    "jquery": "~2.1.3",
+    "waypoints": "~3.0.1",
+    "ScrollMagic": "~1.3.0",
+    "gsap": "~1.15.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
