--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "jquery": "~2.1.3",
     "waypoints": "~3.0.1",
     "ScrollMagic": "~1.3.0",
-    "gsap": "~1.15.0"
+    "gsap": "~1.15.0",
+    "angular-scroll": "~0.6.4"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
