--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "alagoasdevdaycombr",
   "version": "0.0.0",
-  "dependencies": {},
+  "private": true,
+  "dependencies": {
+    "grunt": "^0.4.5"
+  },
   "devDependencies": {
     "grunt": "^0.4.1",
     "grunt-autoprefixer": "^0.7.3",
