--- a/package.json
+++ b/package.json
@@ -28,6 +28,11 @@
     "grunt-svgmin": "^0.4.0",
     "grunt-usemin": "^2.1.1",
     "grunt-wiredep": "^1.7.0",
+    "imagemin": "^3.1.0",
+    "imagemin-gifsicle": "^4.1.0",
+    "imagemin-jpegtran": "^4.0.0",
+    "imagemin-optipng": "^4.2.0",
+    "imagemin-pngquant": "^4.0.0",
     "jshint-stylish": "^0.2.0",
     "karma": "^0.12.28",
     "load-grunt-tasks": "^0.4.0",
